[package]
name = "pgdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg-embed = "0.6"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.52"
ctrlc = "3.2.1"
colored = "2.0.0"
